Winners table for desktop complete, Started on mobile

--- a/index.html
+++ b/index.html
@@ -7,10 +7,77 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> RotoGrinders: The Daily Fantasy Sports Authority
     </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
-
+    <div class="winnerTable my-5">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <div class="table_head">Recent Winners</div>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope=" row" class="pl-5">Player</th>
+                    <td class="score">Score</td>
+                    <td>Rank</td>
+                    <td>Points</td>
+                </tr>
+                <tr>
+                    <th scope="row" class="greenIndicator">Jim Vasallies</th>
+                    <td class="score">50</td>
+                    <td>20</td>
+                    <td>3108pts</td>
+                </tr>
+                <tr>
+                    <th scope="row" class="greenIndicator">Anna Lee Phillipa</th>
+                    <td class="score">120</td>
+                    <td>34</td>
+                    <td>235pts</td>
+                </tr>
+                <tr>
+                    <th scope="row" class="greyIndicator">Carmen Sanfransico</th>
+                    <td class="score">222</td>
+                    <td>340</td>
+                    <td>900pts</td>
+                </tr>
+                <tr>
+                    <th scope="row" class="yellowIndicator">Jake Moore</th>
+                    <td class="score">75</td>
+                    <td>5</td>
+                    <td>67pts</td>
+                </tr>
+                <tr>
+                    <th scope="row" class="greenIndicator">Bette Cooper Lewis</th>
+                    <td class="score">4</td>
+                    <td>73</td>
+                    <td>641pts</td>
+                </tr>
+                <tr>
+                    <th scope="row" class="greyIndicator">Janell Hofkner</th>
+                    <td class="score">14</td>
+                    <td>718</td>
+                    <td>3456pts</td>
+                </tr>
+                <tr>
+                    <th scope="row" class="greyIndicator">Lyn Jenkins</th>
+                    <td class="score">190</td>
+                    <td>18</td>
+                    <td>23pts</td>
+                </tr>
+                <tr>
+                    <th scope="row" class="yellowIndicator">Ansel Brennan</th>
+                    <td class="score">100</td>
+                    <td>136</td>
+                    <td>1007pts</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 
 </html>
