finished winners table

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> RotoGrinders: The Daily Fantasy Sports Authority
     </title>
@@ -14,18 +15,23 @@
 
 <body>
     <div class="winnerTable my-5">
-        <table class="table table-striped">
+        <table class="table table-striped ">
             <thead>
                 <tr>
                     <div class="table_head">Recent Winners</div>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <th scope=" row" class="pl-5">Player</th>
-                    <td class="score">Score</td>
-                    <td>Rank</td>
-                    <td>Points</td>
+                <tr class="types">
+                    <th scope=" col" class="pl-5 full-text">Player</th>
+                    <th scope=" col" class="pl-5 short-text col-">PLR</th>
+
+                    <td scope=" col" class="score">Score</td>
+
+                    <td scope=" col" class="full-text">Rank</td>
+                    <td scope=" col" class="short-text ">RK</td>
+                    <td scope=" col" class="full-text">Points</td>
+                    <td scope=" col" class="short-text  ">PTS</td>
                 </tr>
                 <tr>
                     <th scope="row" class="greenIndicator">Jim Vasallies</th>
@@ -77,6 +83,7 @@
                 </tr>
             </tbody>
         </table>
+        <a href="#" class="moreWinnersLink">See All Winners</a>
     </div>
 </body>
 
